--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^2.0.1",
-    "astro": "^2.9.6"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.9.6",
+    "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.1",
+    "prettier-plugin-astro": "^0.11.0",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
