--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.9.6",
+    "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "tailwindcss": "^3.3.3"
   },
