--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
     "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/vercel": "^3.8.0",
     "astro": "^2.9.6",
     "mdast-util-to-string": "^4.0.0",
-    "reading-time": "^1.5.0",
-    "tailwindcss": "^3.3.3"
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "prettier": "^3.0.1",
     "prettier-plugin-astro": "^0.11.0",
-    "prettier-plugin-tailwindcss": "^0.4.1"
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3"
   }
 }
