--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@astrojs/vercel": "^3.8.0",
     "astro": "^2.9.6",
     "mdast-util-to-string": "^4.0.0",
-    "reading-time": "^1.5.0"
+    "reading-time": "^1.5.0",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
